# thermo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cancel.cpp  command.cgi.cpp  compile  compileserver  delete.cgi.cpp  get-temp.cpp  log.cgi.cpp  logger.cpp  monitor.cpp  pause.cpp  program.cgi.cpp  programs.cgi.cpp  quit.cpp  resume.cpp  run.cpp  server.cpp  set.cpp  status.cgi  status.cgi.cpp  structs.h  thermo.db  thermo.db.clean
html/: index.html  thermo.css  thermo.js
html/fonts/: subset.ff
init/: thermo
